--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -32,7 +32,7 @@ body {
 
 }
 
-#menu-icon {
+#menu-icon{
     cursor: pointer;
 }
 
@@ -63,6 +63,7 @@ body {
     display: flex;
     gap: 2rem;
     align-items: center;
+    width: 15%;
 }
 
 .navigation-profile {
@@ -82,7 +83,7 @@ body {
 
 .left--sidebar {
     width: 17%;
-    height: 100vh;
+    height: 200vh;
 
     display: flex;
     background-color: #fff;
@@ -91,11 +92,11 @@ body {
     transition: 1s ease;
 }
 
-.open {
+.open{
     display: flex;
 }
 
-.close {
+.close{
     display: none;
 }
 
@@ -108,7 +109,7 @@ body {
     width: 70%;
     border-radius: 5px;
     padding: 0.5rem;
-    margin-left: 2rem;
+    margin-left:2rem;
 
 }
 
@@ -127,18 +128,18 @@ body {
 
 /* --------------- right side */
 
-.right-dashboard--content {
+.right-dashboard--content{
     height: 100vh;
     width: 80%;
     padding: 2%;
 }
 
-#title--dashboard {
+#title--dashboard{
     color: #000;
     font-size: 30px;
 }
 
-.insights {
+.insights{
     display: grid;
     grid-template-columns: 17% 17% 17% 17% 17%;
     grid-template-rows: 10%;
@@ -146,166 +147,163 @@ body {
     padding-left: 2%;
 }
 
-.insight {
+.insight{
     display: flex;
     gap: 1rem;
     align-items: center;
-    background-color: #fff;
+    background-color:#fff;
     padding: 3%;
     border-radius: 5px;
-    height: 14vh;
 
-
-
+    
+    
 }
 
-.insight-icon {
+.insight-icon{
     width: 38px;
     height: 38px;
     min-width: 33px;
     min-height: 33px;
 }
 
-.insight-info {
+.insight-info{
     display: flex;
     flex-direction: column;
-
-
+    
+    
 }
 
-.insight-info p {
+.insight-info p{
     font-size: 25px;
-    color: #3E3E3E;
+    color:#3E3E3E;
     font-weight: bold;
     position: relative;
     top: 0.8rem;
-
+  
 
 }
 
-.insight-info small {
+.insight-info small{
     font-size: 15px;
     position: relative;
     color: #3E3E3E;
-    bottom: 0.8rem;
+    bottom:0.8rem;
 }
 
 
 /* ---------------------------------------------charts */
 
 
-.charts {
+.charts{
     display: grid;
     width: 80%;
     grid-template-columns: 75% 40%;
     grid-template-rows: 5%;
     column-gap: 6%;
-    margin-top: 4rem;
+    margin-top: 5rem;
     padding-left: 2rem;
-
-
-
+    
+    
+    
 }
 
-.data-graph--chart {
+.data-graph--chart{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-
+    background-color: #fff;
+    padding: 1rem;
 }
 
-#data-graph {
+#data-graph{
     width: 100%;
     height: 45vh;
 }
 
 
-.left-chart--header {
+.left-chart--header{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+   
+    
 }
 
-.left-chart--header h3 {
+.left-chart--header h3{
     font-size: 22px;
 }
 
-ul {
+ul{
     display: flex;
     align-items: center;
     flex-direction: row;
     gap: 2rem;
-
+    
 }
-
-ul li {
-
+ul li{
+    
     list-style: none;
     font-size: 12px;
-    margin-top: 1rem;
 }
 
 
 
-.pie-chart {
+.pie-chart{
     display: flex;
     flex-direction: column;
-    border-radius: 5px;
-    height: 50vh;
+   border-radius: 5px;
+   height: 55vh;
     background-color: #fff;
-
-
+ 
+    
 }
 
-.pie-chart h3 {
+.pie-chart h3{
     font-size: 22px;
     padding: 1rem;
-
+    
 }
 
-#pie-chart {
-    padding-left: 1.5rem;
+#pie-chart{
+   padding-left: 1.5rem;
     width: 70%;
-    height: auto;
+height: auto;
 }
 
 
-.country {
+.country{
     display: flex;
     gap: 0.8rem;
     align-items: center;
 }
 
-.red-circle {
+.red-circle{
     width: 13px;
     height: 13px;
     border-radius: 50%;
     background-color: #C8242F;
 }
-
-.green-circle {
+.green-circle{
     width: 13px;
     height: 13px;
     border-radius: 50%;
     background-color: #A2B86C;
 }
-
-.orange-circle {
+.orange-circle{
     width: 13px;
     height: 13px;
     border-radius: 50%;
     background-color: #F16C20;
 }
-
-.yellow-circle {
+.yellow-circle{
     width: 13px;
     height: 13px;
     border-radius: 50%;
     background-color: #EBC844;
 }
 
-.country-info {
+.country-info{
     display: grid;
     column-gap: 1rem;
     grid-template-columns: 50% 50%;
@@ -313,7 +311,6 @@ ul li {
     padding: 1rem;
     row-gap: 1rem;
 }
-
 /* ---------------------------------------------charts */
 
 
@@ -345,7 +342,7 @@ ul li {
 
 }
 
-.table-top small {
+.table-top small{
     color: #C8242F;
     font-weight: bold;
 }
@@ -353,174 +350,13 @@ ul li {
 
 
 /* table */
-@media screen and (max-width:1350px) {
-    .insight-info small {
-        font-size: 10px;
-    }
-    .insight-info p {
-        font-size: 20px;
-    }
+
+
+
+#close-arrow{
+    display: none;
 }
 
-@media screen and (max-width:1053px) {
-    .insights {
-        display: grid;
-        grid-template-columns: 25% 25% 25%;
-        grid-template-rows: 50% 50%;
-        column-gap: 10%;
-        row-gap: 7%;
-        padding-left: 2%;
-    }
-
-    .insight-info small {
-        font-size: 10px;
-    }
-
-    .insight-info p {
-        font-size: 20px;
-    }
-
-    .dashboard-item--icon {
-        width: 15px;
-        height: 15px;
-    }
-
-    .dashboard-item span {
-        font-size: 15px;
-    }
-}
-
-@media screen and (max-width:942px) {
-    .insights {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 33% 33% 33%;
-        column-gap: 5%;
-        row-gap: 5%;
-        padding-left: 2%;
-    }
-
-    .left--sidebar {
-        height: 75vh;
-        width: 25%;
-    }
-    .charts {
-        display: grid;
-        width: 80%;
-        grid-template-columns: 100%;
-        grid-template-rows: 40% 40%;
-        row-gap: 3rem;
-    }
-    .pie-chart {
-        width: 70vw;
-        height:80vh;
-    }
-    .search-box {
-        display: flex;
-        width: 63%;
-        align-items: center;
-        margin-left: 2rem;
-    }
-    #data-graph {
-        width: 35rem;
-    }
-    .left-chart--header {
-        width: 35rem;
-    }
-}
-@media screen and (max-width:787px){
-    #data-graph {
-        width:35rem;
-    }
-    .left-chart--header {
-        width: 35rem;
-    }
-    .pie-chart {
-        width:35rem;
-        height:80vh;
-    }
-    .navbar-dashboard {
-        width:50rem;
-    }
-    .insights {
-        column-gap:8%;
-    }
-
-    .insight-info small {
-        font-size: 15px;
-    }
-
-    .insight-info p {
-        font-size: 25px;
-    }
-    
-
-}
-@media screen and (max-width:658px){
-    #data-graph {
-        width:28rem;
-    }
-    .left-chart--header {
-        width: 28rem;
-    }
-    .pie-chart {
-        width: 65vw;
-        height:80vh;
-    }
-    .navbar-dashboard {
-        min-width: 100%;
-        width:50rem;
-    }
-    .left--sidebar {
-        height: 75vh;
-        width:50%;
-    }
-    .insights {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 33% 33% 33%;
-        column-gap:20%;
-        row-gap: 5%;
-        
-    }
-}
-@media screen and (max-width:500px){
-    #data-graph {
-        width:28rem;
-    }
-    .left-chart--header {
-        width: 28rem;
-    }
-    .pie-chart {
-        width: 65vw;
-        height:80vh;
-    }
-    .navbar-dashboard {
-        min-width: 100%;
-        width:50rem;
-    }
-    .left--sidebar {
-        height: 75vh;
-        width:50%;
-    }
-    .insights {
-        display: grid;
-        grid-template-columns:100%;
-        grid-template-rows: 20% 20% 20% 20% 20%;
-        column-gap:20%;
-        row-gap: 5%;
-        
-    }
-    .charts {
-    
-        margin-top:10rem;
-        
-    
-    
-    
-    }
-    .pie-chart {
-        
-        height:50vh;
-    }
+.profile-in-slidebar{
+    opacity: 0;
 }
