--- a/css/dashboard-style.css
+++ b/css/dashboard-style.css
@@ -485,6 +485,20 @@ ul li {
     }
 }
 @media screen and (max-width:500px){
+    .left--sidebar{
+        display: none;
+    }
+    .open{
+        display: none;
+    }
+    
+    .close{
+        display:flex;
+    }
+    .insights{
+        margin-left: 50%;
+    }
+    
     #data-graph {
         width:28rem;
     }
@@ -522,5 +536,18 @@ ul li {
     .pie-chart {
         
         height:50vh;
+    }
+    .insight {
+        
+        width:100vw;
+    
+    
+    }
+    .insight-info small {
+        font-size: 20px;
+    }
+
+    .insight-info p {
+        font-size: 35px;
     }
 }
