--- a/css/ineerpage.css
+++ b/css/ineerpage.css
@@ -15,7 +15,7 @@
 .two--column {
     width: 100%;
     padding: 2%;
-    background-color: #fff;
+    background-color:#fff;
     margin-top: 3%;
 
 }
@@ -31,7 +31,7 @@
 .four--column {
 
     width: 100%;
-    background-color: #fff(201, 225, 164);
+    background-color: #fff;
     margin-top: 3%;
     padding: 2%;
 }
@@ -361,7 +361,6 @@ ul li:nth-child(1) {
 
 
 @media screen and (max-width:896px) {
-    
     .two-column--grid-container {
         display: grid;
         grid-template-columns: 100%;
@@ -382,6 +381,16 @@ ul li:nth-child(1) {
 }
 
 @media screen and (max-width:594px) {
+    .left--sidebar{
+        display: none;
+    }
+    .open{
+        display: none;
+    }
+    
+    .close{
+        display: flex;
+    }
     .three-column-flex-container {
         display: flex;
         flex-direction: column;
